# tokitai-sign

./: ARTIFACT.md  Cargo.toml  README.md  artifact_manifest.csv  figure_1_method.csv  figure_2_quality_budget_curve.csv  figure_3_user_preference.csv  metric_validation_table.csv  table_10_integrated_runtime.csv  table_11_speed_boundary.csv  table_12_stress_interpretation.csv  table_13_weight_stability_regions.csv  table_14_translation_identity_control.csv  table_15_runtime_degraded_profile.csv  table_16_weight_grid.csv  table_17_low_latency_quality_delta.csv  table_18_low_latency_topology_metrics.csv  table_19_runtime_budget_ladder.csv  table_1_ablation_scores.csv  table_20_terminal_io_protocol.csv  table_21_runtime_confidence_1200fps.csv  table_22_adaptive_low_latency_policy.csv  table_24_baseline_positioning.csv  table_2_dirty_budget_curves.csv  table_3_terminal_matrix.csv  table_4_glyph_reconstruction.csv  table_5_dirty_decision_audit.csv  table_6_topology_metrics.csv  table_7_stress_topology_metrics.csv  table_8_weight_sensitivity.csv  table_9_runtime_complexity.csv  todo.json
docs/: algorithm.md  baselines.md  claim-audit.md  compatibility-capture.md  cover-letter.md  formal-problem.md  glyph-robustness.md  novelty-review.md  paper-draft.md  paper-roadmap.md  prior-art-export-log.md  prior-art-matrix.md  runtime-scope.md  submission-package.md  target-journals.md  user-study.md
examples/: tokitai.theme
scripts/: generate_paper_figures.py  make_artifact_manifest.py  reproduce_paper_artifacts.sh
src/: animation.rs  capabilities.rs  cli.rs  main.rs  terminal.rs  (+1 more)
(+9 files in other folders)
